2002-08-01  Andrew Csillag  <drew@localhost.localdomain>

	* docs/devel/devel.tex: more doc updates, readded the AE appendix

	* pylibs/AE/Executables.py (PythonExecutable.mergeNamespaces):
	doesn't set __name__ to '__main__' in data components

2002-07-31  Andrew Csillag  <drew@localhost.localdomain>

	* docs/devel/devel.tex: new chapter: Templating Languages, started
	filling out stuff in API services chapter

	* pylibs/AE/Executables.py (PythonExecutable.mergeNamespaces): now
	sets __name__ to '__main__' in the python namespace so, specifically,
	Cheetah Templates will now work.

2002-07-29  Andrew Csillag  <drew@localhost.localdomain>

	* docs/devel/devel.tex (section{Linkage Services}): added note
	about psptemplate

	* SkunkWeb/sw.conf.in: added bits for psptemplate

	* pylibs/psp.py (psp_compile): fixed error handling so line
	numbers in tracebacks should be closer to right.  Also made
	handling of syntax errors easier to read.

2002-07-29  Jacob Smullyan  <jsmullyan@wnyc.org>

	* SkunkWeb/Services/pycgi.py (_processRequest): added slash at
	beginning of PATH_INFO, if it exists; SCRIPT_FILENAME is the full
	filename of the actual file, and PATH_TRANSLATED is the same but
	contains extra path info.

2002-07-29  Andrew Csillag  <drew@localhost.localdomain>

	* docs/devel/devel.tex: added notes about adding a new templating
	type

	* pylibs/AE/mime.types: added psp mime types

	* SkunkWeb/Services/psptemplate.py: added

	* pylibs/psp.py: added

2002-07-28  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/pycgi.py (_fix): dumb error in determining
	SCRIPT_NAME 

2002-07-28  Andrew Csillag  <drew@localhost.localdomain>

	* docs/devel/devel.tex: revamping

	* docs/paper-letter/Makefile, docs/html/Makefile: added stuff for
	tutorial

2002-07-28  Jacob Smullyan  <smulloni@smullyan.org>

	* docs/PyDO/PyDO.tex (chapter{Operators}): more information about
	operators. 

	* SkunkWeb/Services/rewrite.py (ExtraPathFinder): added a dynamic